# train-400-context-3

./: CHANGELOG.md  CITATION.cff  README.md  SETUP.md  SE_MANIFEST.toml  mkdocs.yaml  pyproject.toml  versions.json  zensical.toml
.github/workflows/: ci-python-mkdocs.yml  deploy-mkdocs.yml  links.yml  release-pypi-mkdocs-shared.yml  release-pypi.yml
0.9.2/: 404.html  index.html  objects.inv  sitemap.xml
0.9.2/api/: index.html
0.9.2/search/: search_index.json
artifacts/: 00_meta.json  01_vocabulary.csv  02_model_weights.csv  03_token_embeddings.csv
corpus/: 000_cat_dog.txt
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/search/: search_index.json
docs/: api.md  index.md
outputs/: train_log.csv
src/toy_gpt_train/: b_vocab.py  d_train.py  e_infer.py  io_artifacts.py  math_training.py
tests/: test_train.py
