# ============================================================
# pyproject.toml (Python and MkDocs project configuration)
# ============================================================
# VARIANT: python-mkdocs
# SOURCE: https://github.com/denisecase/templates

# REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
# WHY: Centralizes project configuration.

[project]
name = "toy-gpt-train-400-context-3" # CUSTOM: Package distribution name (use lowercase and dashes).
readme = "README.md"
requires-python = ">=3.14"
dynamic = ["version"] # WHY: Version is managed with scm and source control tags.

# CUSTOM: Project metadata.
authors = [{ name = "Denise Case", email = "dcase@nwmissouri.edu" }]
description = "Toy GPT next-token prediction using a 3-token context window."
keywords = ["toy", "gpt", "training", "context window", "language model"]
license-files = ["LICENSE"]

# PyPI classifiers to help with discovery.
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",

    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",

    "Typing :: Typed",
]

dependencies = [
    # REQ.DEPS: External packages used by the project code.
    "datafun-toolkit>=0.9.5",
]

[project.optional-dependencies]
# WHY: Optional dependency groups keep the core install clean and focused.
dev = [
    # REQ.DEV.DEPS: External packages used for linting, testing, type checking, etc.
    "bandit>=1.9.2",
    "deptry>=0.10.1",
    "packaging>=25.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyright>=1.1.408",
    "ruff>=0.14.13",
    "twine>=6.2.0",
    "validate-pyproject>=0.24.1",
]

docs = [
    # REQ.DOCS.DEPS: External packages used to generate project documentation.
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings[python]>=1.0.0",
]

[project.urls]
# WHY: Canonical project links used by tooling and documentation.
# CUSTOM: Replace with repo values.
Documentation = "https://toy-gpt.github.io/train-400-context-3/"
Issues = "https://github.com/toy-gpt/train-400-context-3/issues"
Repository = "https://github.com/toy-gpt/train-400-context-3"

# === DEPTRY (CHECK FOR UNDECLARED OR UNUSED DEPENDENCIES) ===

[tool.deptry.per_rule_ignores]
DEP001 = ["toy_gpt_train"]
DEP002 = [
    # === DEV TOOLING (not required at runtime) ===
    "bandit",
    "deptry",
    "packaging",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pyright",
    "ruff",
    "twine",
    "validate-pyproject",

    # === DOCUMENTATION TOOLING (not required at runtime) ===
    "mike",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-static-i18n",
    "mkdocstrings[python]",
    "mkdocstrings",         # WHY: Needed for [python] extra (above).
]
DEP003 = ["toy_gpt_train"]

# === PYRIGHT (TYPE CHECKING HELPS FIND COMMON ERRORS BEFORE THE CODE RUNS) ===

[tool.pyright]
# CUSTOM: Pyright configuration for static type checking.
# This configuration is NOT enforced by CI or pre-commit.
# It is provided for instructors and advanced users who
# explicitly run pyright. It is optional.
# WHY: Strict type checking helps catch bugs early.
include = ["src"]
extraPaths = ["src"]
exclude = [ "**/node_modules", "**/.*", ".venv","**/__pycache__","dist","build"]
pythonVersion = "3.14"
reportMissingImports = "warning"
reportPrivateUsage = "none"
typeCheckingMode = "strict" # strict | basic | off
useLibraryCodeForTypes = false
venv = ".venv"
venvPath = "."

# === PYTEST (VERIFY LOGIC) ===

[tool.pytest.ini_options]
# WHY: Ensure tests are discoverable and coverage is visible.
minversion = "7.0"
testpaths = ["tests"]
addopts = " --cov=src --cov-report=term-missing --cov-fail-under=60"

# === RUFF (PYTHON FORMATTING AND LINTING) ===

[tool.ruff]
# WHY: Ruff provides fast linting and formatting with deterministic output.
exclude = [
    ".eggs",
    "*.egg-info",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
]
line-length = 88 # WHY: PEP 8 standard line length, wrap when possible.
preview = false # WHY: Stable features only; avoid preview features.
target-version = "py313" # WHY: Match latest supported Python version.
unsafe-fixes = false # WHY: Avoid potentially unsafe automatic fixes.

[tool.ruff.format]
# WHY: Formatter choices should be stable to keep diffs small and predictable.
indent-style = "space" # See also .gitattributes for indent style.
line-ending = "auto" # Match existing files and let .gitattributes handle it.
quote-style = "double" # Enforce double quote styles to minimize churn.

[tool.ruff.lint]
# WHY: Professional stricter baseline rules.
select = [
    "E",  # Basic syntax and structural correctness
    "F",  # Undefined names and unused imports
    "W",  # Warnings that catch easy issues early
    "I",  # Deterministic import ordering
    "UP", # Modern Python constructs
    "B",  # Common bug patterns

    "PTH", # Prefer pathlib patterns
    "C4",  # Comprehension correctness and clarity
    "SIM", # Simplify obvious complexity
    "RET", # Return practices

    "D", # Docstring standards (see convention below)
    "S", # Security checks (with deliberate exceptions)
    "ANN", # Enforce type hint annotations
]
ignore = [
    "E501", # line length handled by formatter
    "D203", # conflicts with D211
    "D213", # conflicts with D212 (Google standard summary placement)
    "S101", # allow assert (tests + internal invariants)
]

[tool.ruff.lint.isort]
# WHY: Ordering imports helps keep code diffs (differences) readable.
force-sort-within-sections = true

# === PER-FILE IGNORES (DEPENDS ON DOCSTRING POLICY) ===

[tool.ruff.lint.per-file-ignores]
# WHY: Some files MUST NOT undergo linting or automated fixes.
"src/**/__init__.py" = ["D104", "F401"]         # Allow omission + re-export patterns
"src/**/_version.py" = ["ALL"]                  # Auto-generated file (do not lint)
"src/**/py.typed" = ["ALL"]                     # Marker file (do not lint)
"tests/**/*.py" = ["D", "B018", "B011", "S101"] # Tests have different docstring norms
"notebooks/**/*.ipynb" = ["F821"]               # Notebooks may have runtime-defined names

# === CHOOSE PROJECT DOC STYLE ===

[tool.ruff.lint.pydocstyle]
# WHY: Choose one docstring convention project-wide to avoid mixed styles and churn.
# REQ: Google style is the default policy for this repository.
convention = "google"

# === BUILD SYSTEM ===
#
# REQ.PROJECT:
#   This project MUST define a build system so that local Python modules
#   can be discovered and imported reliably.
#
# WHY:
#   Although this project is not published to PyPI, tools such as editors,
#   test runners, and CI need a consistent way to locate importable code.
#
# REQ.STRUCTURE:
#   All importable Python code MUST live under src/.
#
# WHY:
#   A src/ layout prevents accidental imports from the repository root and
#   ensures consistent behavior across IDEs, tests, and command-line runs.

[build-system]
# REQ.BUILD: A build backend MUST be declared to enable package discovery.
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=80.9.0",
    "setuptools-scm>=9.2.2"
]

[tool.setuptools]
# REQ.PACKAGES: Package discovery MUST be rooted at src/.
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# WHY: Explicitly define package discovery location.
where = ["src"]

[tool.setuptools_scm]
# WHY: If someone builds from a source tree without git metadata,
# this prevents failure and keeps a sensible placeholder.
fallback_version = "0.1.0"
# Optional, but recommended: write the computed version into package at build time.
# Can be read at runtime, without importing setuptools_scm.
version_file = "src/toy_gpt_train/_version.py"
