# ============================================================
# pyproject.toml (Python project configuration)
# ============================================================

# REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
# WHY: Centralizes project configuration.

[project]
name = "toy-gpt-train-400-context-3" # CUSTOM: Package distribution name (use lowercase and dashes).
readme = "README.md"
requires-python = ">=3.14"
dynamic = ["version"] # WHY: Version is managed with build tools

# CUSTOM: Project metadata.
authors = [{ name = "Denise Case", email = "dcase@nwmissouri.edu" }]
description = "Toy GPT next-token prediction using a 3-token context window."
keywords = ["toy", "gpt", "training", "context window", "language model"]
license-files = ["LICENSE"]

# PyPI classifiers to help with discovery.
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Typing :: Typed",
]

dependencies = [
    # REQ.DEPS: External packages used by the project code.
    "datafun-toolkit",
]

[project.optional-dependencies]
# WHY: Optional dependency groups keep the core install clean and focused.
dev = [
    # REQ.DEV.DEPS: External packages used for linting, testing, type checking, etc.
    "bandit",
    "deptry",
    "packaging",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pyright",
    "ruff",
    "twine",
    "validate-pyproject",
]

docs = [
    # REQ.DOCS.DEPS: External packages used to generate project documentation.
    "mkdocstrings[python]",
    "zensical",
]

[project.urls]
# WHY: Canonical project links used by tooling and documentation.
# CUSTOM: Replace with repo values.
Documentation = "https://toy-gpt.github.io/train-400-context-3/"
Issues = "https://github.com/toy-gpt/train-400-context-3/issues"
Repository = "https://github.com/toy-gpt/train-400-context-3"

# === BANDIT (SECURITY LINTING) ===

[tool.bandit]
skips = ["B105"] # WHY: tokens are not secrets in this project; they are the core data being modeled.

# === DEPTRY (CHECK FOR UNDECLARED OR UNUSED DEPENDENCIES) ===

[tool.deptry]
# WHY: Dev and docs dependencies are not imported in source code.
ignore = ["DEP002"]

[tool.deptry.package_module_name_map]
# WHY: PyPI package names differ from importable module names.
# CUSTOM: Add project dependencies here as needed.
"toy-gpt-train-400-context-3" = "toy_gpt_train"

[tool.deptry.per_rule_ignores]
# CUSTOM: Add self-import package here to avoid false positives.
DEP001 = ["toy_gpt_train"]
DEP003 = ["toy_gpt_train"]

# === PYRIGHT (TYPE CHECKING HELPS FIND COMMON ERRORS BEFORE THE CODE RUNS) ===

[tool.pyright]
# CUSTOM: Pyright configuration for static type checking.
# This configuration is NOT enforced by CI or pre-commit.
# It is provided for instructors and advanced users who
# explicitly run pyright. It is optional.
# WHY: Strict type checking helps catch bugs early.
include = ["src"]
extraPaths = ["src"]
exclude = [ "**/node_modules", "**/.*", ".venv","**/__pycache__","dist","build"]
pythonVersion = "3.14"
reportMissingImports = "warning"
reportPrivateUsage = "none"
typeCheckingMode = "strict" # strict | basic | off
useLibraryCodeForTypes = false
venv = ".venv"
venvPath = "."

# === PYTEST (VERIFY LOGIC) ===

[tool.pytest.ini_options]
# WHY: Ensure tests are discoverable and coverage is visible.
minversion = "7.0"
testpaths = ["tests"]
addopts = " --cov=src --cov-report=term-missing --cov-fail-under=60"

# === RUFF (PYTHON FORMATTING AND LINTING) ===

[tool.ruff]
# WHY: Ruff provides fast linting and formatting with deterministic output.
exclude = [
    ".eggs",
    "*.egg-info",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
]
line-length = 88 # WHY: PEP 8 standard line length, wrap when possible.
preview = false # WHY: Stable features only; avoid preview features.
target-version = "py313" # WHY: Match latest supported Python version.
unsafe-fixes = false # WHY: Avoid potentially unsafe automatic fixes.

[tool.ruff.format]
# WHY: Formatter choices should be stable to keep diffs small and predictable.
indent-style = "space" # See also .gitattributes for indent style.
line-ending = "auto" # Match existing files and let .gitattributes handle it.
quote-style = "double" # Enforce double quote styles to minimize churn.

[tool.ruff.lint]
# WHY: Professional stricter baseline rules.
select = [
    "E",  # Basic syntax and structural correctness
    "F",  # Undefined names and unused imports
    "W",  # Warnings that catch easy issues early
    "I",  # Deterministic import ordering
    "UP", # Modern Python constructs
    "B",  # Common bug patterns

    "PTH", # Prefer pathlib patterns
    "C4",  # Comprehension correctness and clarity
    "SIM", # Simplify obvious complexity
    "RET", # Return practices

    "D", # Docstring standards (see convention below)
    "S", # Security checks (with deliberate exceptions)
    "ANN", # Enforce type hint annotations
]
ignore = [
    "E501", # line length handled by formatter
    "D203", # conflicts with D211
    "D213", # conflicts with D212 (Google standard summary placement)
    "S101", # allow assert (tests + internal invariants)
]

[tool.ruff.lint.isort]
# WHY: Ordering imports helps keep code diffs (differences) readable.
force-sort-within-sections = true

# === PER-FILE IGNORES (DEPENDS ON DOCSTRING POLICY) ===

[tool.ruff.lint.per-file-ignores]
# WHY: Some files MUST NOT undergo linting or automated fixes.
"src/**/__init__.py" = ["D104", "F401"]         # Allow omission + re-export patterns
"src/**/_version.py" = ["ALL"]                  # Auto-generated file (do not lint)
"src/**/py.typed" = ["ALL"]                     # Marker file (do not lint)
"tests/**/*.py" = ["D", "B018", "B011", "S101"] # Tests have different docstring norms
"notebooks/**/*.ipynb" = ["F821"]               # Notebooks may have runtime-defined names

# === CHOOSE PROJECT DOC STYLE ===

[tool.ruff.lint.pydocstyle]
# WHY: Choose one docstring convention project-wide to avoid mixed styles and churn.
# REQ: Google style is the default policy for this repository.
convention = "google"

# === BUILD SYSTEM (PYPI RELEASE) ===
#
# REQ.PROJECT:
#   This project MUST define a build system so that Python modules
#   can be discovered, imported, and published to PyPI reliably.
#
# WHY:
#   Tools such as editors, test runners, CI, and PyPI need a consistent
#   way to locate and package importable code.
#
# REQ.STRUCTURE:
#   All importable Python code MUST live under src/.
#
# WHY:
#   A src/ layout prevents accidental imports from the repository root and
#   ensures consistent behavior across IDEs, tests, command-line runs,
#   and published distributions.

[build-system]
# REQ.BUILD: A build backend MUST be declared to enable package discovery and publishing.
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.targets.wheel]
# REQ.PACKAGES: Package discovery MUST be rooted at src/.
packages = ["src/toy_gpt_train"]

[tool.hatch.version]
# WHY: Version is derived from git tags at build time so the package version
# always matches the release tag without manual updates to source files.
# fallback-version is used when no git tags are present (e.g., fresh clone, CI without tags).
# tag-pattern matches tags like v1.2.3 or 1.2.3 and extracts the numeric version.
source = "vcs"
fallback-version = "0.1.0"
tag-pattern = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.hatch.build.hooks.vcs]
# WHY: Writes computed version into package at build time.
# Can be read at runtime without importing hatch-vcs.
version-file = "src/toy_gpt_train/_version.py"
